--- a/JYCarousel/JYCarousel/JYCarouselView/JYCarouselView.xib
+++ b/JYCarousel/JYCarousel/JYCarouselView/JYCarouselView.xib
@@ -15,9 +15,9 @@
             <rect key="frame" x="0.0" y="0.0" width="300" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" indicatorStyle="black" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TRC-uD-64Z">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" indicatorStyle="black" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TRC-uD-64Z">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="150"/>
-                    <color key="backgroundColor" red="1" green="0.45098039220000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IEl-44-rZh">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -29,7 +29,7 @@
                     <rect key="frame" x="5" y="113" width="290" height="37"/>
                 </pageControl>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="dQK-FP-G44" secondAttribute="trailing" constant="5" id="4pb-1f-AbL"/>
                 <constraint firstItem="dQK-FP-G44" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="5rZ-c0-Kp9"/>
