--- a/JYCarousel/JYCarousel/JYCarouselView/JYCarouselViewCell.xib
+++ b/JYCarousel/JYCarousel/JYCarouselView/JYCarouselViewCell.xib
@@ -20,7 +20,7 @@
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W1B-x6-rsQ">
                         <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
-                        <color key="backgroundColor" red="0.57647058819999997" green="0.47450980390000003" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </imageView>
                 </subviews>
             </view>
