--- a/JYCarousel/JYCarousel/JYCarouselView/JYCarouselView.xib
+++ b/JYCarousel/JYCarousel/JYCarouselView/JYCarouselView.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="300" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" indicatorStyle="black" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TRC-uD-64Z">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TRC-uD-64Z">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="150"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IEl-44-rZh">
@@ -42,8 +42,8 @@
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="myCollectionView" destination="TRC-uD-64Z" id="Dbx-s2-MZI"/>
-                <outlet property="myCollectionViewFlowLayout" destination="IEl-44-rZh" id="Gls-9B-QTa"/>
+                <outlet property="myCollectionView" destination="TRC-uD-64Z" id="JDH-p4-7pL"/>
+                <outlet property="myCollectionViewFlowLayout" destination="IEl-44-rZh" id="Ck7-OL-GHE"/>
                 <outlet property="myPageView" destination="dQK-FP-G44" id="tWg-gh-b6T"/>
             </connections>
             <point key="canvasLocation" x="-701" y="68"/>
