--- a/JYCarousel/JYCarousel/Base.lproj/Main.storyboard
+++ b/JYCarousel/JYCarousel/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" hidesBottomBarWhenPushed="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="JYCarousel" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="JYCarousel" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -67,7 +67,7 @@
         <!--Navigation Controller-->
         <scene sceneID="gb9-zn-qxu">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xTI-sc-d9a" sceneMemberID="viewController">
+                <navigationController id="xTI-sc-d9a" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1Jj-0H-ZId">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
